# CUDA will only work with 2.8 and higher
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Project name
PROJECT (CME213B)

# QT and OpenGL
FIND_PACKAGE(Qt4  COMPONENTS QtCore QtGui QtOpenGL REQUIRED)
FIND_PACKAGE          (OpenGL)
SET                   (QT_USE_QTOPENGL TRUE)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

#CUDA
FIND_PACKAGE(CUDA)

SUBDIRS(src)